
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int (* pGetDeviceDriverBaseName ) (int ,int ,int ) ;} ;
typedef TYPE_1__* PPS ;
typedef int LPVOID ;
typedef int LPSTR ;
typedef int DWORD ;


 int stub1 (int ,int ,int ) ;

DWORD
psGetDeviceDriverBaseName(PPS pps, LPVOID ImageBase,LPSTR lpBaseName,DWORD nSize)
{
  return pps->pGetDeviceDriverBaseName(ImageBase, lpBaseName, nSize);
}
